# persona-gpt

./: Cargo.toml  README.md  character.txt
src/: bot.rs  chat.rs  main.rs  message.rs  openai.rs  utils.rs
