[package]
name = "hawking_gpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.10.3"
futures = "0.3.28"
serde = "1.0.160"
serde_json = "1.0.96"
tiktoken-rs = "0.4.1"
tokio = { version = "1.27.0", features = ["full"] }
[dependencies.uuid]
version = "1.3.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

